[tool.poetry]
name = "langchain-video-jungle"
version = "0.1.0"
description = ""
authors = ["Kirk Kaiser <kirk@zothcorp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-core = "^0.3.21"
videojungle = "0.1.25"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-socket = "^0.7.0"
pytest-asyncio = "^0.24.0"
langchain-tests = "0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
